src/styles/Header.css
.header {
    align-self: center;
    background-color: grey;
    width: 100%;
}

.header .navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header .left-header .logo-button img{
    width: 8vh;
    height: 8vh;
    display: block;
}

.header .left-header .logo-button {
    background: transparent;
    border: none;
    padding: 1vh;
    cursor: pointer;
    display: block;
}

.header .right-header {
    display: flex;
}

.header .right-header .right-button {
    margin-left: 0.5vw;
    margin-right: 0.5vw;
}

